# indy-shared-rs

./: COMPLIANCE.yaml  Cargo.toml  README.md  build-universal.sh
.github/: dependabot.yml
.github/workflows/: build.yml
indy-credx/: Cargo.toml
indy-credx/src/: error.rs  lib.rs
indy-credx/src/ffi/: cred_def.rs  cred_offer.rs  cred_req.rs  credential.rs  error.rs  link_secret.rs  mod.rs  object.rs  presentation.rs  revocation.rs  schema.rs  util.rs
indy-credx/src/services/: helpers.rs  issuer.rs  prover.rs  tails.rs  types.rs  verifier.rs
indy-credx/tests/: anoncreds_demos.rs
indy-credx/tests/utils/: anoncreds.rs
indy-data-types/: Cargo.toml
indy-data-types/src/: did.rs  error.rs  lib.rs  macros.rs  qualifiable.rs
indy-data-types/src/anoncreds/: cred_def.rs  cred_offer.rs  cred_request.rs  credential.rs  link_secret.rs  macros.rs  master_secret.rs  mod.rs  nonce.rs  pres_request.rs  presentation.rs  rev_reg.rs  rev_reg_def.rs  rich_schema.rs  schema.rs  wql.rs
indy-data-types/src/identifiers/: cred_def.rs  mod.rs  rev_reg.rs  rich_schema.rs  schema.rs
indy-data-types/src/keys/: mod.rs  types.rs
indy-data-types/src/merkle_tree/: hash.rs  merkletree.rs  mod.rs  proof.rs  tree.rs
indy-data-types/src/utils/: base58.rs  mod.rs
indy-utils/: Cargo.toml
indy-utils/src/: error.rs  lib.rs
wrappers/dotnet/: indy-shared-rs-dotnet.sln
wrappers/dotnet/indy-shared-rs-dotnet/: Consts.cs  ErrorCode.cs  Settings.cs  indy-shared-rs-dotnet.csproj
wrappers/dotnet/indy-shared-rs-dotnet-test/: SharedRsExceptionTests.cs  indy-shared-rs-dotnet-test.csproj
wrappers/dotnet/indy-shared-rs-dotnet-test/IndyCredx/: CredentialApiTests.cs  CredentialDefinitionApiTests.cs  CredentialOfferApiTests.cs  CredentialRequestApiTests.cs  ErrorApiTests.cs  MasterSecretApiTests.cs  ModApiTests.cs  ObjectApiTests.cs  PresentationApiTests.cs  PresentationRequestApiTests.cs  RevocationApiTests.cs  SchemaApiTests.cs
wrappers/dotnet/indy-shared-rs-dotnet/IndyCredx/: CredentialApi.cs  CredentialDefinitionApi.cs  CredentialOfferApi.cs  CredentialRequestApi.cs  ErrorApi.cs  MasterSecretApi.cs  ModApi.cs  NativeMethods.cs  ObjectApi.cs  PresentationApi.cs  PresentationRequestApi.cs  RevocationApi.cs  SchemaApi.cs
wrappers/dotnet/indy-shared-rs-dotnet/Models/: AccumKey.cs  AggregatedProof.cs  AttributeFilter.cs  AttributeInfo.cs  AttributeValue.cs  BlindedMs.cs  BlindingMsCorrectnessProof.cs  CredDefPvtValue.cs  Credential.cs  CredentialDefinition.cs  CredentialDefinitionData.cs  CredentialDefinitionPrivate.cs  CredentialEntry.cs  CredentialKeyCorrectnessProof.cs  CredentialOffer.cs  CredentialProof.cs  CredentialRequest.cs  CredentialRequestMetadata.cs  CredentialRevocationConfig.cs  CredentialRevocationState.cs  CredentialSignature.cs  Identifier.cs  IssuerType.cs  KeyProofAttributeValue.cs  MCaps.cs  MasterSecret.cs  MasterSecretBlindingData.cs  NonRevocProof.cs  NonRevocProofCList.cs  NonRevocProofXList.cs  NonRevocationCredentialSignature.cs  NonRevokedInterval.cs  PKey.cs  Predicate.cs  PredicateInfo.cs  PredicateTypes.cs  Presentation.cs  PresentationProof.cs  PresentationRequest.cs  Primary.cs  (+30 more)
wrappers/golang/indy-credx/types/: credential.go  presentation.go  presentation_test.go  revocation_registry.go
wrappers/javascript/react-native/: package.json  react-native-indy-credx.podspec  react-native-tscodegen.json  tsconfig.json
wrappers/javascript/react-native/android/: build.gradle
wrappers/javascript/react-native/android/src/main/: AndroidManifest.xml
wrappers/javascript/react-native/android/src/main/java/com/reactnativeindycredx/: IndyCredxModule.java  IndyCredxPackage.java
wrappers/javascript/react-native/example/: app.json  package.json
wrappers/javascript/react-native/example/android/: settings.gradle
wrappers/javascript/react-native/example/android/app/: build.gradle
wrappers/javascript/react-native/example/android/app/src/debug/java/com/example/reactnativeindycredx/: ReactNativeFlipper.java
wrappers/javascript/react-native/example/android/app/src/main/: AndroidManifest.xml
wrappers/javascript/react-native/example/android/app/src/main/java/com/example/reactnativeindycredx/: MainActivity.java  MainApplication.java
wrappers/javascript/react-native/example/android/app/src/main/res/values/: strings.xml
wrappers/javascript/react-native/example/ios/: File.swift  Podfile
wrappers/javascript/react-native/example/ios/IndyCredxExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
wrappers/javascript/react-native/example/ios/IndyCredxExample.xcodeproj/: project.pbxproj
wrappers/javascript/react-native/example/ios/IndyCredxExample.xcodeproj/xcshareddata/xcschemes/: IndyCredxExample.xcscheme
wrappers/javascript/react-native/example/ios/IndyCredxExample.xcworkspace/: contents.xcworkspacedata
wrappers/javascript/react-native/example/src/: App.tsx
wrappers/javascript/react-native/ios/: IndyCredx.h  IndyCredx.mm
wrappers/javascript/react-native/ios/IndyCredx.xcodeproj/: project.pbxproj
wrappers/javascript/react-native/src/: index.tsx  turboModule.ts
wrappers/python/demo/: test.py
wrappers/python/indy_credx/: __init__.py  bindings.py  types.py  version.py
