[package]
name = "indy-credx"
version = "1.1.1"
authors = ["Hyperledger Indy Contributors <indy@lists.hyperledger.org>"]
description = "Verifiable credential issuance and presentation for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org)."
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/indy-shared-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "indy", "ssi", "verifiable", "credentials"]
rust-version = "1.70.0"

[lib]
name = "indy_credx"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["ffi-support", "logger", "zeroize"]
logger = ["env_logger"]
vendored = ["indy-data-types/vendored"]

[dependencies]
env_logger = { version = "0.11", optional = true }
ffi-support = { version = "0.4.0", optional = true }
indy-data-types = { version = "0.7.1", features = [
    "cl_native",
], path = "../indy-data-types" }
log = "0.4"
once_cell = "1"
rand = "0.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zeroize = { version = "1", optional = true }
